# ru-wiki-search

./: .gitignore  README.en.md  README.md  README.ru.md  pyproject.toml
src/wiki_search/: __init__.py  wiki_search.py  wiki_searcher.py
src/wiki_search/internal/: constants.py  utils.py  wiki_title_finder.py
