[project]
name = "ru-wiki-search"
version = "1.0.1"
description = "Smart search on Russian Wikipedia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wikipedia-api>=0.6.0",
    "pymorphy3>=2.0.1",
    "rapidfuzz>=3.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "regex>=2023.10.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
